[KlaudSol-CMS-#130] Bug horizontal scroll shows if there are too many columns (#135)
* cms-klaudsol-norlant

* initial

--- a/styles/klaudsolcms.scss
+++ b/styles/klaudsolcms.scss
@@ -205,6 +205,7 @@
     margin-left: 230px;
     background-color: #fff;
     height: 100vh;
+    overflow-x: scroll;
 }
 
 .main-container__single {
